--- a/config/kibana.yml
+++ b/config/kibana.yml
@@ -1,5 +1,5 @@
 ---
-# Modifications to default Kibana configuration 
+# Modifications to default Kibana configuration
 # This file to be exposed to kibana-docker
 # Background and instructions at https://www.elastic.co/guide/en/kibana/current/_configuring_kibana_on_docker.html
 #
@@ -8,7 +8,7 @@
 
 server.name: kibana
 server.host: "0"
-elasticsearch.url: http://elasticsearch:9200
-tilemap.url: "https://stamen-tiles.a.ssl.fastly.net/terrain/{z}/{x}/{y}.jpg"
-tilemap.options.maxZoom: 20
-tilemap.options.attribution: 'Map tiles by [Stamen Design](http://stamen.com), under [CC BY 3.0](http://creativecommons.org/licenses/by/3.0). Data by [OpenStreetMap](http://openstreetmap.org), under ODbL(http://www.openstreetmap.org/copyright).'
+elasticsearch.hosts: [http://elasticsearch:9200]
+map.tilemap.url: "https://stamen-tiles.a.ssl.fastly.net/terrain/{z}/{x}/{y}.jpg"
+map.tilemap.options.maxZoom: 20
+map.tilemap.options.attribution: 'Map tiles by [Stamen Design](http://stamen.com), under [CC BY 3.0](http://creativecommons.org/licenses/by/3.0). Data by [OpenStreetMap](http://openstreetmap.org), under ODbL(http://www.openstreetmap.org/copyright).'
